<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".mvvm.screens.main.tabs.mealplan.MealPlanFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_space"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:itemCount="20"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_day_of_month"
        tools:visibility="visible" />

    <Button
        android:id="@+id/breakfast_for_date_details_button"
        style="@style/GlobalTextInputStyle.Big"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:text="@string/action_go_to_breakfast_for_date_details" />

    <Button
        android:id="@+id/lunch_for_date_details_button"
        style="@style/GlobalTextInputStyle.Big"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:text="@string/action_go_to_lunch_for_date_details" />

    <Button
        android:id="@+id/dinner_for_date_details_button"
        style="@style/GlobalTextInputStyle.Big"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:text="@string/action_go_to_dinner_for_date_details" />

    <Button
        android:id="@+id/snack_for_date_details_button"
        style="@style/GlobalTextInputStyle.Big"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:text="@string/action_go_to_snack_for_date_details" />

</LinearLayout>

