<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".mvvm.views.main.tabs.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/profileDetailsButton"
            style="@style/GlobalTextInputStyle.Big"
            android:backgroundTint="@color/grey"
            android:shadowColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/action_go_to_profile_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dietTipsTitleTextView"
                style="@style/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:text="@string/diet_tips_details_title" />

            <TextView
                android:id="@+id/dietTipsMoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:layout_marginEnd="@dimen/large_space"
                android:layout_gravity="end|bottom"
                android:textColor="@color/green"
                android:text="@string/diet_tips_more" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dietTipsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:layout_marginTop="@dimen/medium_space" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dietTipsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_diet_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <include layout="@layout/part_result"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/mealPlanForTodayTitleTextView"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/meal_plan_for_today_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mealPlanForTodayConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <Button
                android:id="@+id/breakfastForDateDetailsButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:text="@string/action_go_to_breakfast_for_date_details"
                app:layout_constraintBottom_toTopOf="@id/dinnerForDateDetailsButton"
                app:layout_constraintEnd_toStartOf="@+id/lunchForDateDetailsButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <Button
                android:id="@+id/lunchForDateDetailsButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginEnd="@dimen/medium_space"
                android:text="@string/action_go_to_lunch_for_date_details"
                app:layout_constraintBottom_toBottomOf="@+id/breakfastForDateDetailsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/breakfastForDateDetailsButton"
                app:layout_constraintTop_toTopOf="@+id/breakfastForDateDetailsButton" />

            <Button
                android:id="@+id/dinnerForDateDetailsButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/medium_space"
                android:text="@string/action_go_to_dinner_for_date_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/snackForDateDetailsButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/breakfastForDateDetailsButton" />

            <Button
                android:id="@+id/snackForDateDetailsButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginEnd="@dimen/medium_space"
                android:text="@string/action_go_to_snack_for_date_details"
                app:layout_constraintBottom_toBottomOf="@+id/dinnerForDateDetailsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dinnerForDateDetailsButton"
                app:layout_constraintTop_toTopOf="@+id/dinnerForDateDetailsButton"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/statisticsTitleTextView"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/statistics_title" />

            <Button
                android:id="@+id/diaryDetailsButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/grey"
                android:layout_margin="@dimen/medium_space"
                android:text="@string/action_go_diary_details"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</ScrollView>
