<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".mvvm.screens.main.tabs.home.diettips.DietTipsChaptersFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dietTipsChaptersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                tools:itemCount="20"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_diet_tips_chapter" />

            <ProgressBar
                android:id="@+id/dietTipsChaptersProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="@color/green" />

            <LinearLayout
                android:id="@+id/dietTipsChaptersTryAgainContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_to_load_diet_tips_chapters" />

                <Button
                    android:id="@+id/dietTipsChaptersTryAgainButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/try_again" />

            </LinearLayout>

            <TextView
                android:id="@+id/noDietTipsChaptersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/no_diet_tips_chapters" />

</FrameLayout>